# Nexus-Hive

./: .coverage  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DATA_PLATFORM_FLAGSHIP_SPEC.ko.md  Dockerfile  GOVERNED_ANALYTICS_FLAGSHIP_SPEC.ko.md  Makefile  README.md  SECURITY.md  SERVICE_GRADE_SPECKIT.ko.md  agent_utils.py  architecture_resource_pack.py  circuit_breaker.py  config.py  databricks_adapter.py  docker-compose.yml  exceptions.py  logging_config.py  main.py  middleware.py  models.py  nexus_enterprise.db  pyproject.toml  requirements.txt  restructure_git.sh  review_resource_pack.py  runtime_store.py  security.py  seed_db.py  snowflake_adapter.py  warehouse_adapter.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  service-inquiry.yml
.github/workflows/: ci.yml  pages-auto-deploy.yml
architecture/: blueprint.json
benchmarks/: README.md  agent_accuracy_eval.py  load_test.js  sample_results.json
cli/: main.py
docs/: BIGTECH_ELEVATION_PLAN.md  BUSINESS_OPERATIONS.md  COMMERCIALIZATION_INDEX.md  DEPLOYMENT_ACTIVATION.md  PAYMENTS_AND_REFUNDS_DRAFT.md  PRIVACY_POLICY_DRAFT.md  REVENUE_READINESS.md  architecture-evidence-map.md  cloud-ai-architecture.md  commercial-offer.md  conversion-ux-model.md  discovery-guide.md  enterprise-readiness.md  executive-one-pager.md  monetization-playbook.md  openrouter-routing.md  product-operating-model.md  quality-gate.md  revenue-architecture.md  revenue-growth-model.md  reviewer-evidence-map.md  search-growth-implementation.md  service-architecture.md  service-growth-model.md  service-launch-playbook.md  service-package.md  solution-architecture.md  system-architecture.md
docs/adr/: 001-multi-agent-over-monolith.md  002-warehouse-adapter-abstraction.md  003-langgraph-over-ad-hoc-chains.md  005-helm-chart-design.md  (+2 more)
framework/: __init__.py  agent.py  memory.py  orchestrator.py  tools.py
frontend/: app.js  index.html  llms.txt  robots.txt  service-offer.json  sitemap.xml  style.css
graph/: __init__.py  nodes.py
policy/: __init__.py  audit.py  engine.py  governance.py
routes/: __init__.py  architecture_demo.py  ask.py  auth.py  health_meta.py  policy.py  query_audit.py  reviewer_demo.py  schemas.py  warehouse.py
scripts/: bootstrap_databricks_demo.py  exercise_runtime.py  k6_governance.js  load_runtime.py
services/: __init__.py  build_helpers.py  openai_helpers.py  streaming.py
tests/: conftest.py  test_agent_orchestration.py  test_agent_utils.py  test_api_endpoints.py  test_databricks_adapter.py  test_databricks_live_adapter.py  test_framework.py  test_frontend_metadata.py  test_policy_engine.py  test_runtime_endpoints.py  test_snowflake_adapter.py  test_snowflake_live_adapter.py  test_sql_generation.py
(+52 files in other folders)
