[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-hive"
version = "0.2.0"
description = "Governed analytics copilot with audited NL2SQL, policy previews, and runtime review surfaces."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Doeon Kim", email = "ehdjs1351@gmail.com"}]
license = { text = "MIT" }
keywords = ["nl2sql", "multi-agent", "governance", "snowflake", "databricks", "fastapi"]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pandas>=2.2.0,<4.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "langgraph>=0.2.0,<2.0.0",
  "langchain-core>=0.3.0,<2.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<10.0.0",
  "pytest-cov>=5.0.0,<8.0.0",
  "pytest-asyncio>=0.23.0,<2.0.0",
  "ruff>=0.4.0"
]
snowflake = [
  "snowflake-connector-python>=3.6.0,<5.0.0"
]
databricks = [
  "databricks-sdk>=0.20.0,<1.0.0"
]

[tool.setuptools]
py-modules = [
  "main", "config", "seed_db", "security", "runtime_store",
  "warehouse_adapter", "snowflake_adapter", "databricks_adapter",
  "circuit_breaker", "exceptions", "logging_config",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E402", "E501", "I001"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[project.urls]
Repository = "https://github.com/KIM3310/Nexus-Hive"
